fixed gap issue body

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Rubik:wght@500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Rubik:wght@500;600&display=swap");
 
 :root {
   line-height: 1.5;
@@ -12,31 +12,31 @@
   background-color: #black;
   color: white;
   height: 100%;
-
 }
 
 h1 {
-font-family: 'Rubik', sans-serif;
-font-weight: 500;
-font-size: 24px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
 }
 
-h2{
-  font-family:'Rubik',sans-serif;
+h2 {
+  font-family: "Rubik", sans-serif;
   font-weight: 600;
   font-size: 20px;
 }
 
-h3{
-  font-family:'Rubik',sans-serif;
+h3 {
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
   font-size: 18px;
 }
 
-body{
-  font-family:'Baloo 2',sans-serif;
+body {
+  font-family: "Baloo 2", sans-serif;
   font-weight: 500;
-  font-size: 18px; 
+  font-size: 18px;
+  margin: 0;
 }
 
 .content {
